# dl_automation

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini  tree_res.txt
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/: __init__.py  cli.py  monitor_pasteboard_for_kindle.py
tests/: __init__.py  monitor_pasteboard_for_kindle_test.py  test_daily_life.py
