[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "daily_life"
version = "0.1.0"
description = "some authomation scripts in daily life"
readme = "README.rst"
authors = [
  {name = "Lysander", email = "nowhere@outook.com"}
]
maintainers = [
  {name = "Lysander", email = "nowhere@outook.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/Lysander086/daily_life/issues"
changelog = "https://github.com/Lysander086/daily_life/blob/master/changelog.md"
homepage = "https://github.com/Lysander086/daily_life"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

